# FastAPI

lab1/: Dockerfile  README.md  main.py  pyproject.toml
lab1/src/: main.py
lab1/tests/: test_src.py
