[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    { name = "kzyeaz", email = "kxa6967@mavs.uta.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "ruff (>=0.11.10,<0.12.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn[standard]==0.34.2"
]

[tool.poetry]
packages = [{include = "src", from = "."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
